[gd_scene load_steps=3 format=3 uid="uid://b6dcysfk0sa1y"]

[ext_resource type="Script" uid="uid://vk26180lukoa" path="res://components/main_menu/tutorial.gd" id="1_7luft"]
[ext_resource type="Texture2D" uid="uid://bdco4psrxf4df" path="res://assets/dexter.png" id="2_0k3gk"]

[node name="Tutorial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7luft")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05490196, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Space" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="Content" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Space" type="Control" parent="VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="PrevButton" type="Button" parent="VBoxContainer/Content"]
layout_mode = 2
size_flags_vertical = 4
text = "<"

[node name="Space2" type="Control" parent="VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="Text" type="Label" parent="VBoxContainer/Content"]
layout_mode = 2

[node name="Space3" type="Control" parent="VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="Image" type="TextureRect" parent="VBoxContainer/Content"]
layout_mode = 2
texture = ExtResource("2_0k3gk")
expand_mode = 3
stretch_mode = 5

[node name="Space4" type="Control" parent="VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="NextButton" type="Button" parent="VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = ">"

[node name="Space5" type="Control" parent="VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="Space2" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.13

[node name="Navigation" type="HBoxContainer" parent="VBoxContainer"]
layout_direction = 2
layout_mode = 2
alignment = 1

[node name="Space" type="Control" parent="VBoxContainer/Navigation"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PageIndicator" type="Label" parent="VBoxContainer/Navigation"]
layout_mode = 2
text = "1 / 5"

[node name="Space2" type="Control" parent="VBoxContainer/Navigation"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SkipButton" type="Button" parent="VBoxContainer/Navigation"]
layout_mode = 2
size_flags_horizontal = 8
text = "SKIP (R)"
alignment = 2

[node name="Space3" type="Control" parent="VBoxContainer/Navigation"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Space3" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.02
